# arm9-template

./: LICENSE.txt  README  common.mk  configure.ac
src/: Makefile.am  arm9loaderhax.ld  start.s
